force-app/main/default/objects/CLE_Event__c/CLE_Event__c.object-meta.xml
<CustomObject>
    <label>CLE Event</label>
    <nameField>
        <label>CLE Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CLE Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>