force-app/main/default/objects/CLE_Event__c/fields/Attendee_Count__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Count__c</fullName>
    <label>Attendee Count</label>
    <summaryForeignKey>CLE_Attendance__c.CLE_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>