force-app/main/default/objects/CLE_Event__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <formula>CASE(
    MONTH( Date__c ),
    1, &quot;January&quot;,
    2, &quot;February&quot;,
    3, &quot;March&quot;,
    4, &quot;April&quot;,
    5, &quot;May&quot;,
    6, &quot;June&quot;,
    7, &quot;July&quot;,
    8, &quot;August&quot;,
    9, &quot;September&quot;,
    10, &quot;October&quot;,
    11, &quot;November&quot;,
    12, &quot;December&quot;,
    &quot;Unknown&quot;
) &amp; &quot; &quot; &amp; TEXT(DAY(Date__c)) &amp; &quot;, &quot; &amp; TEXT(YEAR(Date__c))</formula>
    <label>Event Date</label>
    <type>Text</type>
</CustomField>