force-app/main/default/objects/CLE_Event__c/fields/General_Credit__c.field-meta.xml
<CustomField>
    <fullName>General_Credit__c</fullName>
    <label>General Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>