force-app/main/default/objects/CLE_Event__c/fields/PR_DIV__c.field-meta.xml
<CustomField>
    <fullName>PR_DIV__c</fullName>
    <label>PR DIV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>