force-app/main/default/objects/CLE_Event__c/fields/PR_MHSA__c.field-meta.xml
<CustomField>
    <fullName>PR_MHSA__c</fullName>
    <label>PR MHSA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>