force-app/main/default/objects/CLE_Event__c/fields/PR_OTHER__c.field-meta.xml
<CustomField>
    <fullName>PR_OTHER__c</fullName>
    <label>PR OTHER</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>